--- a/ChurchDB_CSS.css
+++ b/ChurchDB_CSS.css
@@ -1,21 +1,33 @@
 #myTable {
-  border-collapse: collapse; /* Collapse borders */
-  width: 100%; /* Full-width */
-  border: 1px solid #ddd; /* Add a grey border */
-  font-size: 18px; /* Increase font-size */
+  border-collapse: collapse;  /* Collapse borders */
+  width: 100%;  /* Full-width */
+  font-family: "Spartan";  /* Select font: Spartan */
+  font-size: 18px;  /* Increase font-size */
+}
+
+#myTable th {
+  background-color: #FE6264; /* Make header red */
+  color: white;  /* Make header text white */
 }
 
 #myTable th, #myTable td {
-  text-align: left; /* Left-align text */
-  padding: 12px; /* Add padding */
+  text-align: left;  /* Left-align text */
+  padding: 12px;  /* Add padding */
+  border-left: 2px solid #ddd;  /* Vertical borders */
+}
+
+#myTable td:first-child, #myTable th:first-child {
+  border-left: none;  /* Remove left-most border */
 }
 
 #myTable tr {
-  /* Add a bottom border to all table rows */
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;  /* Add a bottom border to all table rows */
 }
 
-#myTable tr.header, #myTable tr:hover {
-  /* Add a grey background color to the table header and on hover */
-  background-color: #f1f1f1;
+#myTable tr:nth-child(even) {
+  background-color: #f2f2f2;  /* Zebra row pattern */
+}
+
+#myTable tr:hover {
+  background-color: #ddd;  /* Highlight on hover */
 }
